* Updated missing language keys (in english, but they can easily be fixed)