@@ -211,6 +211,31 @@ class Reports extends Secure_area
 		$this->load->view("reports/tabular",$data);
 	}
 	
+	//Summary discounts report
+	function summary_discounts($start_date, $end_date, $export_excel=0)
+	{
+		$this->load->model('reports/Summary_discounts');
+		$model = $this->Summary_discounts;
+		$tabular_data = array();
+		$report_data = $model->getData(array('start_date'=>$start_date, 'end_date'=>$end_date));
+		
+		foreach($report_data as $row)
+		{
+			$tabular_data[] = array($row['discount_percent'],$row['count']);
+		}
+
+		$data = array(
+			"title" => $this->lang->line('reports_discounts_summary_report'),
+			"subtitle" => date('m/d/Y', strtotime($start_date)) .'-'.date('m/d/Y', strtotime($end_date)),
+			"headers" => $model->getDataColumns(),
+			"data" => $tabular_data,
+			"summary_data" => $model->getSummaryData(array('start_date'=>$start_date, 'end_date'=>$end_date)),
+			"export_excel" => $export_excel
+		);
+
+		$this->load->view("reports/tabular",$data);
+	}
+	
 	//Input for reports that require only a date range. (see routes.php to see that all graphical summary reports route here)
 	function date_input()
 	{
@@ -481,6 +506,44 @@ class Reports extends Secure_area
 		$this->load->view("reports/graphs/bar",$data);
 	}
 	
+	//Graphical summary discounts report
+	function graphical_summary_discounts($start_date, $end_date)
+	{
+		$this->load->model('reports/Summary_discounts');
+		$model = $this->Summary_discounts;
+
+		$data = array(
+			"title" => $this->lang->line('reports_discounts_summary_report'),
+			"data_file" => site_urL("reports/graphical_summary_discounts_graph/$start_date/$end_date"),
+			"subtitle" => date('m/d/Y', strtotime($start_date)) .'-'.date('m/d/Y', strtotime($end_date)),
+			"summary_data" => $model->getSummaryData(array('start_date'=>$start_date, 'end_date'=>$end_date))
+		);
+
+		$this->load->view("reports/graphical",$data);
+	}
+	
+	//The actual graph data
+	function graphical_summary_discounts_graph($start_date, $end_date)
+	{
+		$this->load->model('reports/Summary_discounts');
+		$model = $this->Summary_discounts;
+		$report_data = $model->getData(array('start_date'=>$start_date, 'end_date'=>$end_date));
+		
+		$graph_data = array();
+		foreach($report_data as $row)
+		{
+			$graph_data[$row['discount_percent']] = $row['count'];
+		}
+		
+		$data = array(
+			"title" => $this->lang->line('reports_discounts_summary_report'),
+			"yaxis_label"=>$this->lang->line('reports_count'),
+			"xaxis_label"=>$this->lang->line('reports_discount_percent'),
+			"data" => $graph_data
+		);
+
+		$this->load->view("reports/graphs/bar",$data);
+	}
 	function specific_customer_input()
 	{
 		$data = $this->_get_common_report_data();
