@@ -56,4 +56,8 @@ $lang['reports_employee'] = 'Empleado';
 $lang['reports_tax_percent'] = 'Tax Percent';
 $lang['reports_sales_amount'] = 'Sales amount';
 $lang['reports_revenue'] = 'Revenue';
+$lang['reports_discounts'] = 'Discounts';
+$lang['reports_discounts_summary_report'] = 'Discounts Summary Report';
+$lang['reports_discount_percent'] = 'Discount Percent';
+$lang['reports_count'] = 'Count';
 ?>
